# Practice-earthquake-library

./: .gitignore  README.md  ionoplot.py  main.py  notes.md  pyproject.toml
ionoplot/: __init__.py
notebook/: practice.py  test.py
